cli/tests/testdata/error_005_missing_dynamic_import.ts.out
error: Uncaught (in promise) TypeError: Cannot load module "[WILDCARD]/bad-module.ts".
    at file://[WILDCARD]/error_005_missing_dynamic_import.ts:2:35
  const _badModule = await import("./bad-module.ts");
                     ^
    at async file://[WILDCARD]/error_005_missing_dynamic_import.ts:2:22
